remove the text alignment from message boxes, fix padding for the button in horizontal forms to preserve the vertical rhythm after it

--- a/sen.extra.css
+++ b/sen.extra.css
@@ -25,45 +25,42 @@
   border:1px solid #999;
   margin:1.5em;
   padding:0.666em;
-  text-align:center;
 }
 .error{
   background:#fee;
   border:1px solid red;
   margin:1.5em;
   padding:0.666em;
-  text-align:center;
 }
 .notice{
   background:#eef;
   border:1px solid #00f;
   margin:1.5em;
   padding:0.666em;
-  text-align:center;
 }
 .success{
   background:#efe;
   border:1px solid #0f0;
   margin:1.5em;
   padding:0.666em;
-  text-align:center;
 }
 .warning{
   background:#ffe;
   border:1px solid #ff0;
   margin:1.5em;
   padding:0.666em;
-  text-align:center;
 }
 .aside-left{
   clear:left;
   float:left;
-  margin:0 1.5em 0 0;
+  margin:0 1.5em 1.5em 0;
+  overflow:hidden;
 }
 .aside-right{
   clear:right;
   float:right;
-  margin:0 0 0 1.5em;
+  margin:0 0 1.5em 1.5em;
+  overflow:hidden;
 }
 /** Common context-sensitive classes - These names are obnoxious on purpose, I want you to change them into what classname fits with your content. :) */
 .firstParagraphArticle:first-letter{
@@ -77,7 +74,8 @@
 .horizontalForm button{
   clear:left;
   float:left;
-  margin:0;
+  margin:0.25em 0 0;
+
 }
 .horizontalForm input,.horizontalForm textarea{
   float:left;
